# crystal-sphinx-workspace

./: .gitignore  .gitmodules  Cargo.toml  engine.code-workspace  hardward.md  hardware.kdl  notes.md  rustfmt.toml  setup.py  setup.sh
.cargo/: config.toml
editor/: Cargo.toml
editor/run/config/: crates.json
editor/src/: main.rs
game/: .gitignore  Cargo.toml  renderdoc.cap
game/src/: main.rs
