[workspace]
members = [
	"crystal-sphinx/temportal-engine/engine",
	"crystal-sphinx/temportal-engine/editor",
	"crystal-sphinx/temportal-engine/vulkan-rs/vulkan",
	"crystal-sphinx/temportal-engine/vulkan-rs/derive",
	"crystal-sphinx/temportal-engine/input-actions",
	"crystal-sphinx/temportal-engine/demo/triangle",
	"crystal-sphinx/temportal-engine/demo/triangle-editor",
	"crystal-sphinx/temportal-engine/demo/ui",
	"crystal-sphinx/temportal-engine/demo/ui-editor",
	"crystal-sphinx/temportal-engine/demo/boid",
	"crystal-sphinx/temportal-engine/demo/boid-editor",
	"crystal-sphinx/core", "crystal-sphinx/editor",
	"plugins/vanilla",
	"game", "editor",
]
default-members = [
	"crystal-sphinx/temportal-engine/vulkan-rs/vulkan",
	"crystal-sphinx/temportal-engine/vulkan-rs/derive",
	"crystal-sphinx/temportal-engine/input-actions",
	"crystal-sphinx/temportal-engine/demo/triangle",
	"crystal-sphinx/temportal-engine/demo/triangle-editor",
	"crystal-sphinx/temportal-engine/demo/ui",
	"crystal-sphinx/temportal-engine/demo/ui-editor",
	"crystal-sphinx/temportal-engine/demo/boid",
	"crystal-sphinx/temportal-engine/demo/boid-editor",
	"crystal-sphinx/core", "crystal-sphinx/editor",
	"plugins/vanilla",
	"game", "editor",
]
