[workspace]
members = [
	"crystal-sphinx/temportal-engine/engine",
	"crystal-sphinx/temportal-engine/editor",
	"crystal-sphinx/temportal-engine/vulkan-rs/vulkan",
	"crystal-sphinx/temportal-engine/vulkan-rs/derive",
	"crystal-sphinx/temportal-engine/input-actions",
	"crystal-sphinx/temportal-engine/demo/triangle/demo",
	"crystal-sphinx/temportal-engine/demo/triangle/editor",
	"crystal-sphinx/core", "crystal-sphinx/editor",
	"plugins/vanilla",
	"game", "editor",
]
exclude = [
	"crystal-sphinx/temportal-engine/demo/ui/demo",
	"crystal-sphinx/temportal-engine/demo/ui/editor",
	"crystal-sphinx/temportal-engine/demo/boid/demo",
	"crystal-sphinx/temportal-engine/demo/boid/editor",
	"crystal-sphinx/temportal-engine/demo/audio/demo",
	"crystal-sphinx/temportal-engine/demo/audio/editor",
	"crystal-sphinx/temportal-engine/demo/chat-room/demo",
	"crystal-sphinx/temportal-engine/demo/chat-room/editor",
]
default-members = [
	"crystal-sphinx/temportal-engine/vulkan-rs/vulkan",
	"crystal-sphinx/temportal-engine/vulkan-rs/derive",
	"crystal-sphinx/temportal-engine/input-actions",
	"crystal-sphinx/temportal-engine/demo/triangle/demo",
	"crystal-sphinx/temportal-engine/demo/triangle/editor",
	"crystal-sphinx/core", "crystal-sphinx/editor",
	"plugins/vanilla",
	"game", "editor",
]
