[package]
name = "editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crystal-sphinx = { path = "../crystal-sphinx/core" }
crystal-sphinx-editor = { path = "../crystal-sphinx/editor" }
vanilla = { path = "../plugins/vanilla" }
