[package]
name = "game"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = ["crystal-sphinx/profile", "engine/profile"]
debug = ["crystal-sphinx/debug"]

[dependencies]
engine = { path = "../crystal-sphinx/temportal-engine/engine", package = "temportal-engine" }
crystal-sphinx = { path = "../crystal-sphinx/core" }
vanilla = { path = "../plugins/vanilla" }

log = "0.4"
tokio = { version = "1.21", features = ["full"] }
profiling = "1.0"
